--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,23 +7,7 @@ services:
       - "8000:8000"
     volumes:
       - .:/app
-    depends_on:
-      - db
     environment:
-      - DATABASE_URL=postgresql://simpleadmin:admin123@4.228.63.134:5432/simplepostgre01
-      - JWT_SECRET=your_secret_key
+      - DATABASE_URL=${DATABASE_URL}
+      - SECRET_KEY=${SECRET_KEY}
       - ENVIRONMENT=development
-
-  db:
-    image: postgres:13
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_USER=simpleadmin
-      - POSTGRES_PASSWORD=admin123@
-      - POSTGRES_DB=simplepostgre01
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-
-volumes:
-  postgres_data:
