--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-fastapi>=0.68.0
-uvicorn>=0.15.0
-sqlalchemy>=1.4.0
-psycopg2-binary>=2.9.0
-passlib[bcrypt]>=1.7.4
-python-jose>=3.3.0
-python-multipart>=0.0.5
+fastapi==0.109.2
+uvicorn==0.27.1
+sqlalchemy==2.0.27
+psycopg2-binary==2.9.9
+passlib[bcrypt]==1.7.4
+python-jose==3.3.0
+python-multipart==0.0.7
+pydantic[email]==2.6.1
+python-dotenv==1.0.1
