--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,6 +25,8 @@ jobs:
         pip install -r requirements.txt
     
     - name: Executar testes
+      env:
+        TESTING: "true"
       run: |
         pytest -v --cov=src --cov-report=xml
     
