feat(connection): adicionar banco de dados em memória para testing no connection diretamente

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Executar testes
       env:
         TESTING: "true"
+        SECRET_KEY: "test_secret_key_for_ci"
       run: |
         pytest -v --cov=src --cov-report=xml
     
