feat(src): adicionar função de criação de salas + testes automatizados

--- a/pytest.ini
+++ b/pytest.ini
@@ -6,6 +6,7 @@ addopts = -v --cov=src --cov-report=html
 asyncio_mode = auto
 asyncio_default_fixture_loop_scope = function
 
-# Ignora avisos de DeprecationWarning relacionados ao jose (engloba alguns erros dentro dos testes automatizados)
 filterwarnings =
-    ignore::DeprecationWarning:.*jose.*
+    ignore::DeprecationWarning
+    ignore::pydantic.warnings.PydanticDeprecatedSince20
+    ignore::pytest.PytestDeprecationWarning
