--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,20 +16,20 @@ jobs:
     - name: Configurar Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.11'
+        python-version: '3.12'
     
     - name: Instalar dependências
       run: |
         python -m pip install --upgrade pip
-        pip install pytest pytest-asyncio httpx sqlalchemy pytest-cov
+        pip install pytest pytest-asyncio httpx sqlalchemy pytest-cov python-jose[cryptography] bcrypt fastapi python-dotenv
         pip install -r requirements.txt
     
     - name: Executar testes
       env:
         TESTING: "true"
-        SECRET_KEY: "test_secret_key_for_ci"
+        SECRET_KEY: "eyJhbGciOiJIUzI1NiJ9.eyJSb2xlIjoiQWRtaW4iLCJJc3N1ZXIiOiJJc3N1ZXIiLCJVc2VybmFtZSI6IkphdmFJblVzZSIsImV4cCI6MTczMjY1OTc1NiwiaWF0IjoxNzMyNjU5NzU2fQ.NWSN7v4H41vDfZhl8mUNwbTDa5ibYDxyZLIrDBl9CXg"
       run: |
-        pytest -v --cov=src --cov-report=xml
+        pytest tests/ -v --cov=src --cov-report=xml
     
     - name: Upload coverage reports
       uses: codecov/codecov-action@v3
