--- a/pytest.ini
+++ b/pytest.ini
@@ -2,9 +2,8 @@
 pythonpath = .
 testpaths = tests
 python_files = test_*.py
-addopts = -v --cov=src --cov-report=html
+addopts = -v
 asyncio_mode = auto
-asyncio_default_fixture_loop_scope = function
 
 filterwarnings =
     ignore::DeprecationWarning
